# Calculator_NamedPipe_Client_Server

./: CMakeLists.txt  Project1_calcualtor_IPC.txt  README.md  main.cpp
client/: CMakeLists.txt  NamedPipeClient.cpp  NamedPipeClient.h  main.cpp  resources.qrc
client/qml/: main.qml
server/: CMakeLists.txt  NamedPipeServer.cpp  NamedPipeServer.h  main.cpp
shared/: CMakeLists.txt  Message.h  MessageUtils.h
