# cmake_minimum_required(VERSION 3.16)

# project(Calculator_NamedPipe_Client_Server VERSION 0.1 LANGUAGES CXX)

# set(CMAKE_CXX_STANDARD_REQUIRED ON)

# find_package(Qt6 REQUIRED COMPONENTS Quick)

# qt_standard_project_setup(REQUIRES 6.5)

# qt_add_executable(appCalculator_NamedPipe_Client_Server
#     main.cpp
# )

# qt_add_qml_module(appCalculator_NamedPipe_Client_Server
#     URI Calculator_NamedPipe_Client_Server
#     VERSION 1.0
#     QML_FILES
#         Main.qml
# )

# # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# # If you are developing for iOS or macOS you should consider setting an
# # explicit, fixed bundle identifier manually though.
# set_target_properties(appCalculator_NamedPipe_Client_Server PROPERTIES
# #    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.appCalculator_NamedPipe_Client_Server
#     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
#     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
#     MACOSX_BUNDLE TRUE
#     WIN32_EXECUTABLE TRUE
# )

# target_link_libraries(appCalculator_NamedPipe_Client_Server
#     PRIVATE Qt6::Quick
# )

# include(GNUInstallDirs)
# install(TARGETS appCalculator_NamedPipe_Client_Server
#     BUNDLE DESTINATION .
#     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
#     RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
# )

cmake_minimum_required(VERSION 3.14)
project(NamedPipeCalculator LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Thêm các thư mục con vào dự án
add_subdirectory(shared)
add_subdirectory(server)
# add_subdirectory(client)
